# skrl-ik

./: .gitignore  Dockerfile  docker-compose.yaml
src/shkrl_description/: CMakeLists.txt  package.xml
src/shkrl_description/config/: cb3_controllers.yaml  e-series_controllers.yaml
src/shkrl_description/launch/: control.launch.py  rsp.launch.py  view.launch.py
src/shkrl_description/models/: robot.urdf.xacro
src/shkrl_description/rviz/: view.rviz
src/shkrl_description/src/: commander.cpp
src/shkrl_ik/: CMakeLists.txt  package.xml
src/shkrl_ik/launch/: control.launch.py  train.launch.py
src/shkrl_ik/models/: dqn_agent_local.pth  dqn_agent_optimizer.pth  dqn_agent_target.pth
src/shkrl_ik/scripts/: control.py  definitions.py  train.py
src/shkrl_msgs/: CMakeLists.txt  package.xml
src/shkrl_msgs/srv/: GetTCP.srv
